Fixed saving permissions and re-added CSS classes to Plotly Dash HTML Components

--- a/assets/longruntransformer.ipynb
+++ b/assets/longruntransformer.ipynb
@@ -20,17 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "QLnvgfRy2U1H"
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
-      "  warnings.warn(msg)\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorboard'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-4467b0732c50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msqlite3\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msql\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorboard\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m# -- Tensorflow -- #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorboard'"
      ]
     }
    ],
@@ -1368,19 +1371,21 @@
     "                                         \n",
     "                                         \n",
     "# -- TreeMap -- #\n",
+    "treemap_fig = px.treemap(parsed_tree_df, path=col_name_list, color='sum')\n",
     "\n",
-    "# f = px.treemap(parsed_tree_df, path=col_name_list, color='sum')\n",
     "table = pd.DataFrame(data=list(embed_weights.keys()), columns=['token'])\n",
-    "\n",
     "\n",
     "# -- Dash App Logic -- #\n",
     "\n",
     "app.layout = html.Div([\n",
     "    \n",
-    "        html.Div(dcc.Graph(id = '3d_scat', figure=scatter3d_fig, style={'height': '100%'}\n",
-    "        ), className='color1', id='graph_div'),\n",
+    "        html.Div(dcc.Graph(id = '3d_scat', figure=scatter3d_fig, config={'responsive': True}, \n",
+    "        style={'height': '100%', 'width': '100%'}), className='main-graph-container', id='graph_div'),\n",
     "    \n",
-    "        html.Div(className='color2', id = 'data_table',\n",
+    "        html.Div(dcc.Graph(id = '3d_tree', figure=treemap_fig, config={'responsive': True}, \n",
+    "        style={'height': '100%', 'width': '100%'}), className='secondary-graph-container', id='tree_div'),\n",
+    "    \n",
+    "        html.Div(className='related-graph', id = 'data_table',\n",
     "                 children=[dash_table.DataTable(\n",
     "                     id='table',\n",
     "                     columns=[{\"name\": i, \"id\": i} for i in table.columns],\n",
@@ -1393,14 +1398,7 @@
     "                                 'color': 'white'},\n",
     "                     style_header={'backgroundColor': 'rgb(30, 30, 30)'},\n",
     "                 )]\n",
-    "        )], className='container')\n",
-    "\n",
-    "# style_data={'height': 'auto', 'lineHeight': '15px'}\n",
-    "                    # style_table={'height': 'auto'},\n",
-    "                    # table.to_dict('records')\n",
-    "# global_update = None\n",
-    "# html.Div(className='color3', id='logger', children=[html.P(children=\"this is a temporary log\", id='logger_text')])\n",
-    "\n",
+    "        )], id='report-container')\n",
     "\n",
     "# -- App Callbacks -- #\n",
     "\n",
