Non Recursive Tree to List Method

--- a/assets/notebooks/longruntransformer.ipynb
+++ b/assets/notebooks/longruntransformer.ipynb
@@ -1658,6 +1658,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tree_to_list_parser(node):\n",
+    "    tree_df = []\n",
+    "    curr_path = []\n",
+    "    tree_dict = {}\n",
+    "    prev_root = [(\"root\", node)]\n",
+    "    while len(prev_root) > 0:\n",
+    "        # Peek at last value\n",
+    "        curr_root = prev_root[-1]\n",
+    "        \n",
+    "        # Get the node element\n",
+    "        curr_node = curr_root[1].key_to_child_node\n",
+    "        \n",
+    "        # Follow path value if not already there\n",
+    "        if len(curr_path) <= 0 or curr_path[-1] != curr_root[0]:\n",
+    "            curr_path.append(curr_root[0])\n",
+    "        \n",
+    "        visited = False\n",
+    "        if curr_root[1] in tree_dict:\n",
+    "            visited = True\n",
+    "        else:\n",
+    "            tree_dict[curr_root[1]] = True\n",
+    "        \n",
+    "        # Check if value has any leaf nodes\n",
+    "        if not visited and len(curr_node.keys()) > 0:\n",
+    "            # Add those to the stack\n",
+    "            for nn in curr_node.items():\n",
+    "                prev_root.append((nn[0], nn[1]))\n",
+    "        else:\n",
+    "            # Remove previous node in the path\n",
+    "            prev_root.pop()\n",
+    "            \n",
+    "            # Record to the database if leaf\n",
+    "            if len(curr_node.keys()) <= 0:\n",
+    "                tree_df.append(deepcopy(curr_path))\n",
+    "            \n",
+    "            # Move back up tree\n",
+    "            curr_path.pop()\n",
+    "    return tree_df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "oRaXmjdkcvVm"
@@ -1763,8 +1809,7 @@
     "\n",
     "# The root node is the master node of the tree and will be our return point\n",
     "root_node = deepcopy(w2vp.TCL.template_miner.drain.root_node)\n",
-    "depth = w2vp.TCL.template_miner.config.drain_depth\n",
-    "parsed_tree = tree_parser(root_node, l, m, root_node, depth)\n",
+    "parsed_tree = tree_to_list_parser(root_node)\n",
     "parsed_tree_df = pd.DataFrame(data=parsed_tree)\n",
     "\n",
     "# The returned dataframe has generic columns so we will provide custom labels\n",
