Changed option label to its proper terminology

--- a/assets/notebooks/longruntransformer.ipynb
+++ b/assets/notebooks/longruntransformer.ipynb
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "id": "Je-dqJAGlzA9"
    },
@@ -1908,10 +1908,10 @@
     "            dcc.Dropdown(\n",
     "                id='demo-dropdown',\n",
     "                options=[\n",
-    "                    {'label': 'Euclidean', 'value': 'ED'},\n",
+    "                    {'label': 'Cartesian', 'value': 'CT'},\n",
     "                    {'label': 'Spherical', 'value': 'SP'}\n",
     "                ],\n",
-    "                value='ED')\n",
+    "                value='CT')\n",
     "        ], className='options-graph-container'),\n",
     "    \n",
     "        html.Div(dcc.Graph(id = '3d_scat', figure=scatter3d_fig, config={'responsive': True}, \n",
@@ -1944,7 +1944,7 @@
     "    # simulate expensive query    \n",
     "    if value == 'SP':\n",
     "        new_df = pd.DataFrame(data=spherical_embeddings, columns=['token', 'x1', 'x2', 'x3'])\n",
-    "    elif value == \"ED\":\n",
+    "    elif value == \"CT\":\n",
     "        new_df = pd.DataFrame(data=reduced_embeddings, columns=['token', 'x1', 'x2', 'x3'])\n",
     "    else:\n",
     "        return no_update\n",
@@ -1975,7 +1975,7 @@
     "                query_arr = np.array(l).reshape(1,-1)\n",
     "                if value == \"SP\":\n",
     "                    _, neighbors = sphere_knn_trained.kneighbors(X=query_arr)\n",
-    "                elif value == \"ED\":\n",
+    "                elif value == \"CT\":\n",
     "                    _, neighbors = euclid_knn_trained.kneighbors(X=query_arr)\n",
     "\n",
     "                neighbors_list = neighbors.tolist()[0]\n",
