Added Cluster Algos and DR options to Dashboard

--- a/assets/notebooks/longruntransformer.ipynb
+++ b/assets/notebooks/longruntransformer.ipynb
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {
     "id": "a60tfcLUoERG"
    },
@@ -1728,17 +1728,21 @@
     "# -- Generate Data for Word Embeddings Projector -- #\n",
     "\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.decomposition import FastICA\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
     "# shape = vocab size x embedding dim size\n",
     "weights = np.ndarray(shape=(len(embed_weights), W2V_EMBED_SIZE)) \n",
     "pca = PCA(n_components=N_PROJ_DIM)\n",
+    "ica = FastICA(n_components=N_PROJ_DIM)\n",
     "\n",
     "# -- Populate Matrix for PCA -- #\n",
     "for idx, weight in enumerate(list(embed_weights.values())):\n",
     "    weights[idx, :] = weight \n",
     "\n",
+    "# -- Dimensionality Reduction -- #\n",
     "reduced_embeddings = pca.fit_transform(weights)\n",
+    "#reduced_embeddings = ica.fit_transform(weights)\n",
     "\n",
     "# -- Spherical Coordinates -- #\n",
     "spherical_embeddings = appendSpherical_np(reduced_embeddings)\n",
@@ -1777,17 +1781,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['0.13523099419171034', '1.6448558756289564', '-1.853928788524912'],\n",
+       "array(['0.017351798783553328', '1.8427753554944604', '2.4674043487141364'],\n",
        "      dtype='<U131')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {
     "id": "X7TkKEOFyRH3"
    },
@@ -1841,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {
     "id": "Je-dqJAGlzA9"
    },
@@ -1905,21 +1909,43 @@
     "app.layout = html.Div([\n",
     "    \n",
     "        html.Div([\n",
+    "            html.Label(\"Clustering Algorithm (TODO)\", style={'color': 'white'}),\n",
     "            dcc.Dropdown(\n",
-    "                id='demo-dropdown',\n",
+    "                id='cluster-dropdown',\n",
+    "                options=[\n",
+    "                    {'label': 'KNN', 'value': 'KNN'},\n",
+    "                    {'label': 'GMM', 'value': 'GMM'},\n",
+    "                    {'label': 'Bayesian GMM', 'value': 'BGMM'}\n",
+    "                ],\n",
+    "                value='KNN'),\n",
+    "            html.Label(\"Coordinate Space\", style={'color': 'white'}),\n",
+    "            dcc.Dropdown(\n",
+    "                id='coord-dropdown',\n",
     "                options=[\n",
     "                    {'label': 'Cartesian', 'value': 'CT'},\n",
     "                    {'label': 'Spherical', 'value': 'SP'}\n",
     "                ],\n",
-    "                value='CT')\n",
+    "                value='CT'),\n",
+    "            html.Label(\"Dimensionality Reduction (TODO)\", style={'color': 'white'}),\n",
+    "            dcc.Dropdown(\n",
+    "                id='dr-dropdown',\n",
+    "                options=[\n",
+    "                    {'label': 'PCA', 'value': 'PCA'},\n",
+    "                    {'label': 'ICA', 'value': 'ICA'},\n",
+    "                    {'label': 'LDA', 'value': 'LDA'},\n",
+    "                    {'label': 'Sparse RP', 'value': 'SRP'},\n",
+    "                    {'label': 'Gaussian RP', 'value': 'GRP'}\n",
+    "                ],\n",
+    "                value='PCA'\n",
+    "            )\n",
     "        ], className='options-graph-container'),\n",
-    "    \n",
+    "\n",
     "        html.Div(dcc.Graph(id = '3d_scat', figure=scatter3d_fig, config={'responsive': True}, \n",
     "        style={'height': '100%', 'width': '100%'}), className='main-graph-container', id='graph_div'),\n",
-    "    \n",
+    "\n",
     "        html.Div(dcc.Graph(id = '3d_tree', figure=treemap_fig, config={'responsive': True}, \n",
     "        style={'height': '100%', 'width': '100%'}), className='secondary-graph-container', id='tree_div'),\n",
-    "    \n",
+    "\n",
     "        html.Div(className='related-graph', id = 'data_table',\n",
     "                 children=[dash_table.DataTable(\n",
     "                     id='table',\n",
@@ -1941,20 +1967,21 @@
     "\n",
     "@cache.memoize()\n",
     "def global_store(value):\n",
-    "    # simulate expensive query    \n",
+    "    # simulate expensive query\n",
     "    if value == 'SP':\n",
     "        new_df = pd.DataFrame(data=spherical_embeddings, columns=['token', 'x1', 'x2', 'x3'])\n",
     "    elif value == \"CT\":\n",
     "        new_df = pd.DataFrame(data=reduced_embeddings, columns=['token', 'x1', 'x2', 'x3'])\n",
     "    else:\n",
     "        return no_update\n",
+    "\n",
     "    new_df['x1'] = pd.to_numeric(new_df['x1'])\n",
     "    new_df['x2'] = pd.to_numeric(new_df['x2'])\n",
     "    new_df['x3'] = pd.to_numeric(new_df['x3'])\n",
     "    scatter3d_fig = new_df\n",
     "    return scatter3d_fig\n",
     "\n",
-    "@app.callback(Output('signal', 'data'), Input('demo-dropdown', 'value'))\n",
+    "@app.callback(Output('signal', 'data'), Input('coord-dropdown', 'value'))\n",
     "def compute_value(value):\n",
     "    global_store(value)\n",
     "    return value\n",
@@ -2019,7 +2046,7 @@
     "        ff = px.scatter_3d(\n",
     "            df,\n",
     "            x='x1', \n",
-    "            y='x2', \n",
+    "            y='x2',\n",
     "            z='x3',\n",
     "            hover_name='token')\n",
     "\n",
@@ -2030,7 +2057,7 @@
     "    else:\n",
     "        return no_update, no_update\n",
     "\n",
-    "    \n",
+    "\n",
     "app.run_server(host='0.0.0.0', mode='jupyterlab')"
    ]
   },
