Started the ability to add Affinity Propagation clustering method

--- a/assets/notebooks/longruntransformer.ipynb
+++ b/assets/notebooks/longruntransformer.ipynb
@@ -1731,6 +1731,7 @@
     "from sklearn.decomposition import FastICA\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.mixture import GaussianMixture\n",
+    "from sklearn.cluster import AffinityPropagation\n",
     "\n",
     "# shape = vocab size x embedding dim size\n",
     "weights = np.ndarray(shape=(len(embed_weights), W2V_EMBED_SIZE))\n",
@@ -1937,7 +1938,8 @@
     "                options=[\n",
     "                    {'label': 'KNN', 'value': 'KNN'},\n",
     "                    {'label': 'GMM', 'value': 'GMM'},\n",
-    "                    {'label': 'Bayesian GMM', 'value': 'BGMM'}\n",
+    "                    {'label': 'Bayesian GMM', 'value': 'BGMM'},\n",
+    "                    {'label': 'Affinity Prop.', 'value': 'AP'},\n",
     "                ],\n",
     "                value='KNN'),\n",
     "            html.Label(\"Coordinate Space\", style={'color': 'white'}),\n",
@@ -2026,6 +2028,8 @@
     "    # calculate new clustering algorithm\n",
     "    if value == \"KNN\":\n",
     "        model = NearestNeighbors(n_neighbors=W2V_NEIGHBORS, algorithm='auto')\n",
+    "    elif value == \"AP\":\n",
+    "        model = AffinityPropagation()\n",
     "    #elif value == \"GMM\":\n",
     "    #    model = GaussianMixture(n_components=N_PROJ_DIM)\n",
     "    return model\n",
@@ -2059,13 +2063,13 @@
     "    if '3d_scat.clickData' in ids:\n",
     "        if clickData:\n",
     "            for p in clickData['points']:\n",
+    "                if value[1] != \"KNN\":\n",
+    "                    return no_update, no_update\n",
+    "\n",
     "                l = [p['x'],p['y'],p['z']]\n",
     "                query_arr = np.array(l).reshape(1,-1)\n",
     "\n",
-    "                if value[1] == \"KNN\":\n",
-    "                    _, neighbors = clustering_model.kneighbors(X=query_arr)\n",
-    "                #elif value[1] == \"GMM\":\n",
-    "                #    _, neighbors = clustering_model.kneighbors(X=query_arr)\n",
+    "                _, neighbors = clustering_model.kneighbors(X=query_arr)\n",
     "\n",
     "                neighbors_list = neighbors.tolist()[0]\n",
     "                tokens = []\n",
