Added Random Projection and SVM

--- a/assets/notebooks/longruntransformer.ipynb
+++ b/assets/notebooks/longruntransformer.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 97,
    "metadata": {
     "id": "QLnvgfRy2U1H"
    },
@@ -64,6 +64,8 @@
     "from sklearn.mixture import GaussianMixture\n",
     "from sklearn.cluster import AffinityPropagation\n",
     "from sklearn.cluster import KMeans\n",
+    "from sklearn.random_projection import SparseRandomProjection\n",
+    "from sklearn.svm import SVC\n",
     "\n",
     "# -- Dash -- #\n",
     "from jupyter_dash import JupyterDash\n",
@@ -1759,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 95,
    "metadata": {
     "id": "a60tfcLUoERG"
    },
@@ -1777,6 +1779,7 @@
     "# -- Dimensionality Reduction -- #\n",
     "pca = PCA(n_components=N_PROJ_DIM, random_state=DASH_SEED).fit(weights)\n",
     "ica = FastICA(n_components=N_PROJ_DIM, random_state=DASH_SEED).fit(weights)\n",
+    "srp = SparseRandomProjection(n_components=N_PROJ_DIM, random_state=DASH_SEED).fit(weights)\n",
     "reduced_embeddings = pca.transform(weights)\n",
     "\n",
     "# -- Calculate Nearest Neighbors -- #\n",
@@ -2056,6 +2059,7 @@
     "    {'label': 'Bayesian GMM', 'value': 'BGMM'},\n",
     "    {'label': 'Affinity Prop.', 'value': 'AP'},\n",
     "    {'label': 'KMEANS', 'value': 'KM'},\n",
+    "    {'label': 'SVM', 'value': 'SVM'},\n",
     "]\n",
     "\n",
     "coordinate_space_drop_down_options = [\n",
@@ -2081,11 +2085,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
    "metadata": {
     "id": "Je-dqJAGlzA9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/env/lib/python3.8/site-packages/sklearn/cluster/_affinity_propagation.py:246: ConvergenceWarning:\n",
+      "\n",
+      "Affinity propagation did not converge, this model will not have any cluster centers.\n",
+      "\n",
+      "/env/lib/python3.8/site-packages/sklearn/cluster/_affinity_propagation.py:460: ConvergenceWarning:\n",
+      "\n",
+      "This model does not have any cluster centers because affinity propagation did not converge. Labeling every sample as '-1'.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
     "cache = Cache()\n",
@@ -2250,6 +2269,8 @@
     "        dr_embeddings = pca.transform(weights)\n",
     "    elif value == \"ICA\":\n",
     "        dr_embeddings = ica.transform(weights)\n",
+    "    elif value == \"SRP\":\n",
+    "        dr_embeddings = srp.transform(weights)\n",
     "    else:\n",
     "        return no_update\n",
     "    return dr_embeddings\n",
@@ -2267,6 +2288,8 @@
     "        model = KMeans(n_clusters=4)\n",
     "    elif value == \"GMM\":\n",
     "        model = GaussianMixture(n_components=4)\n",
+    "    elif value == \"SVM\":\n",
+    "        model = SVC(kernel='poly', degree=3, probability=True, random_state=DASH_SEED)\n",
     "    return model\n",
     "\n",
     "\n",
