added configs back in

--- a/assets/notebooks/longruntransformer.ipynb
+++ b/assets/notebooks/longruntransformer.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "import os\n",
     "import sys, getopt\n",
     "import sentencepiece as spm\n",
+    "\n",
     "\n",
     "def convert_sqlite_to_csv(inputFolder, ext, tableName):\n",
     "    \"\"\" inputFolder - Folder where sqlite files are located. \n",
@@ -61,6 +62,7 @@
     "        else:\n",
     "            continue\n",
     "            \n",
+    "\n",
     "def standardize_logs(logs: pd.DataFrame) -> pd.DataFrame:\n",
     "\n",
     "    # remove timestamps\n",
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "QLnvgfRy2U1H"
    },
@@ -163,7 +165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/env/lib/python3.8/site-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
+      "/opt/conda/lib/python3.8/site-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
       "  warnings.warn(msg)\n"
      ]
     }
@@ -512,6 +514,38 @@
    },
    "source": [
     "## Pipeline Objects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class PhraseCaptureLayerConfig:\n",
+    "    min_count: int = 5\n",
+    "    threshold: float = 7\n",
+    "    load_model: bool = True\n",
+    "    save_model: bool = False\n",
+    "    training: bool = True\n",
+    "\n",
+    "    def load(self, config: dict):\n",
+    "        try:\n",
+    "            config = config[self.__class__.__name__]\n",
+    "        except Exception as e:\n",
+    "            logger.warn(e)\n",
+    "            logger.warn('No configuration found for Phrase Capture Layer')\n",
+    "\n",
+    "        for attr in config.keys():\n",
+    "            setattr(self, attr, config[attr])"
    ]
   },
   {
@@ -3003,7 +3037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
