adds sigil_libs libraries

--- a/lab/notebooks/Untitled_2.ipynb
+++ b/lab/notebooks/Untitled_2.ipynb
@@ -4,12 +4,48 @@
    "cell_type": "code",
    "execution_count": 367,
    "id": "d2e937d7",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
     "\n",
     "!python -m spacy download en_core_web_lg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6c769900-431f-407f-88d3-e62bd18f4c47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ab701bd4-c10a-435b-a6a9-bccfc033dedf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensorflow.test.is_built_with_cuda()"
    ]
   },
   {
@@ -360,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "7807b694",
    "metadata": {},
    "outputs": [],
